--- a/views/home.html
+++ b/views/home.html
@@ -1,8 +1,5 @@
 <div data-ng-controller="Home">
-    <h1>Home Page</h1>
-    [ Home |
-    <a href="/#/crud">Crud</a>&nbsp;]
-    <br/>
-    <br/>Nothing here yet. Go to
-    <a href="/#/crud">Crud page</a>&nbsp;using the menu above.
+
+    Nothing here yet. Go to the
+    <a href="/#/crud">CRUD page</a>&nbsp;using the menu above.
 </div>
