--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -1,20 +1,24 @@
 * {
-  -webkit-user-select: none;  /* Disable selection/copy of elements when tapping for a long time */
-  -webkit-touch-callout: none; /* Disable touch callouts */
+    -webkit-user-select: none;
+    /* Disable selection/copy of elements when tapping for a long time */
+    -webkit-touch-callout: none;
+    /* Disable touch callouts */
 }
-
-input, textarea, [contenteditable] * {
-  -webkit-user-select: auto;  /* Allow selection for input elements and those with contenteditable attribute */
+input,
+textarea,
+[contenteditable] * {
+    -webkit-user-select: auto;
+    /* Allow selection for input elements and those with contenteditable attribute */
 }
-
 .content-padded {
-  padding-top: 10px;
-    max-width:800px;
-    margin-left:auto;
-    margin-right:auto;
+    padding: 2px 10px 10px 10px;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    border: solid 1px #ccc;
 }
-
 .ng-hide {
-display:none;
-    visibility:hidden;
+    display: none;
+    visibility: hidden;
 }
